# minimum-unitynativeplugin

./: LICENSE
Plugin/: .gitignore  CMakeLists.txt  CMakePresets.json  MinimumPlugin.cpp  ScopedProfiler.cpp  ScopedProfiler.h
SampleProject/: .gitignore
SampleProject/Assets/Plugins/macOS/: libminimum.dylib
SampleProject/Assets/Scenes/: SampleScene.unity
SampleProject/Assets/Scripts/: Minimum.cs
SampleProject/ProjectSettings/: ProjectSettings.asset
SampleProject/UserSettings/Layouts/: default-2021.dwlt
